--- a/.env.dev
+++ b/.env.dev
@@ -1,4 +1,4 @@
-DEBUG=1
+DJANGO_SETTINGS_MODULE=movie_web.settings.dev
 SECRET_KEY=foo
 DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 [::1]
 SQL_ENGINE=django.db.backends.postgresql
